<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_ads"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"

            >
            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:src="@drawable/back"
                />
            <ImageView
                android:layout_centerVertical="true"

                android:layout_toEndOf="@+id/iv_back"
                android:id="@+id/tray_image"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/tray_image_content_description"
                android:src="@color/colorAccent"
                 />
            <RelativeLayout
                android:layout_toEndOf="@+id/tray_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView

                    android:id="@+id/pack_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_from_tray_to_name"
                    android:layout_marginLeft="@dimen/margin_from_tray_to_name"
                    android:layout_marginTop="18dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_below="@+id/pack_name"
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_from_tray_to_name"
                    android:layout_marginLeft="@dimen/margin_from_tray_to_name"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_marginBottom="15dp"
                    android:layout_below="@+id/author"
                    android:id="@+id/pack_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_from_tray_to_name"
                    android:layout_marginLeft="@dimen/margin_from_tray_to_name"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>


        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.andro.whatswebapp.activity.whatsappsticker.BottomRecyclerView
                android:id="@+id/sticker_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:fadingEdgeLength="@dimen/fading_edge_length"
                android:paddingStart="@dimen/preview_side_margin"
                android:paddingLeft="@dimen/preview_side_margin"
                android:paddingEnd="@dimen/preview_side_margin"
                android:paddingRight="@dimen/preview_side_margin"
                android:requiresFadingEdge="vertical" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.1"
                android:background="#000000"
                android:visibility="invisible" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/preview_side_margin"
            android:layout_marginLeft="@dimen/preview_side_margin"
            android:layout_marginEnd="@dimen/preview_side_margin"
            android:layout_marginRight="@dimen/preview_side_margin">

            <TextView
                android:id="@+id/already_added_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/details_pack_already_added"
                android:textColor="#9b9b9b"
                android:textSize="14sp"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/add_to_whatsapp_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/btn_green"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless">

                <TextView
                    style="@style/StickerPreviewButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:drawableStart="@drawable/sticker_3rdparty_wa"
                    android:drawableLeft="@drawable/sticker_3rdparty_wa"
                    android:drawablePadding="8dp"
                    android:focusable="false"
                    android:foreground="@android:color/transparent"
                    android:text="@string/add_to_whatsapp" />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ll_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"
        />

</RelativeLayout>
